--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -54,10 +54,13 @@ after 2 byte requested (so now 9 bytes in total requested):\\
 \section*{Problem 2}
 \begin{enumerate}[label=\alph*)]
 \item There are $\frac{2^{36}}{2^{13}} = 2^{23}$ pages in the virtual address space. \\
-\item If each page table entry is 4 bytes = $2^5 = 32$ bits, then there must be $2^32$ physical pages. Thus the total addressable memory should be that times the size of a page: $2^32 \cdot 2^{13} = 2^{45}$ bytes. \\
-\item I would use a three level page table because it would minimize the amount of memory used by page tables. \\
-\item For a single page table, the number of page table entries would be $\frac{2^33}{2^13} = 2^{20}$. Each page table entry is 4 bytes so that would be $2^{22}$ bytes.\\
-For a two level page table, we can split the page table address into two, making it so that we can address into the first table with 10 bits, which tells us the location of the second page table, and then we can address into the second page table with 10 bits, and that page table entry should tell us the physical page address. Thus the average page size would be $2^10 \cdot 2^2 = 2^{12}$ bytes. \\
-For a three level page table, we can split the page table address into three, making it so that we can address into the first table with 6 bits, second table with 7 bits, and third table with 7 bits. This gives us an average page table size of $\frac{2^6 + 2^8}{3} \cdot 4$ bytes. 
+\item If each page table entry is 4 bytes = $2^5 = 32$ bits, then there must be $2^{32}$ physical pages. Thus the total addressable memory should be that times the size of a page: $2^{32} \cdot 2^{13} = 2^{45}$ bytes. \\
+\item I would use a 1 level page table because an 8GB process would be using most of the memory anyways. A 2 or 3 level page table would only serve to obfuscate things as you would still have to allocate memory for pretty much all of the 2nd and 3rd level pages. \\
+\item For a single page table, the number of page table entries would be $\frac{2^33}{2^13} = 2^{20}$.
+\end{enumerate}
+\section*{Problem 3}
+\begin{enumerate}[label=\alph*)]
+\item The page size would be $2^8$ bytes\\
+\item A process that has $2^{18}$ bytes would be using $\frac{2^{18}}{2^8} = 2^{10}$ pages. This means that the number of allocated page table entries in the third level table must be $2^{10}$. Each third level page table has $2^6$ entries, so there must have been $\frac{2^{10}}{2^6} = 2^4$ 2nd level page entries allocated. There are $2^8$ total 2nd level page tables, so there must have been $\frac{2^8}{2^4} = 2^4$ 1st level page entries allocated. The number of pages is $\frac{2^{32}}{2^8} = 2^{24}$ bytes, so the size of each page entry must be 24 bits, or 3 bytes. Thus we have a final answer of $(2^{10} + 2^{5}) \cdot 3 = 3168$ bytes. \\
 \end{enumerate}
 \end{document}
