--- a/hw2/hw2.tex
+++ b/hw2/hw2.tex
@@ -69,5 +69,6 @@ In total for the data segment, we allocated: $(75 \cdot 2 \cdot 2^6 + 2^8 + 2^{1
 We wasted $318 + (2^{10} -1) \cdot 3$ bytes. \\
 For the stack segment, I already did this in b). We allocated a total of $2^6 \cdot 2^4 \cdot 3 + 2^8\cdot 3 + 2^{10} \cdot 3$ and wasted $(2^8 - 3 + 2^{10} - 1) \cdot 3$ bytes.  \\
 So in total we allocated $(2^6\cdot 3 + 2^8 + 2^{10}) \cdot 3 + (75 \cdot 2 \cdot 2^6 + 2^8 + 2^{10}) \cdot 3 + 2^6 \cdot 2^4 \cdot 3 + 2^8\cdot 3 + 2^{10} \cdot 3$ for page tables and wasted $(2^8 - 3 + 2^{10} - 1) \cdot 3 + 318 + (2^{10} -1) \cdot 3 + (2^8 - 3 + 2^{10} - 1) \cdot3$ bytes due to internal fragmentation. \\
+\item The size of the page should just be the offset, $2^{12}$ bytes since the protection bits should be accounted for in the page table entries. 
 \end{enumerate}
 \end{document}
